// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Demo4 reducer should not update state when an unknown action is dispatched 1`] = `
{
  "emptyVars": [],
  "formValid": true,
  "hasError": false,
  "hasResult": false,
  "irmaAttributes": {
    "city": "",
    "email": "",
    "houseNumber": "",
    "name": "",
    "owner": "",
    "street": "",
    "telephone": "",
    "zipcode": "",
  },
}
`;

exports[`Demo4 reducer should update when action invalidateForm is dispatched 1`] = `
{
  "emptyVars": [],
  "formValid": false,
  "hasError": false,
  "hasResult": false,
  "irmaAttributes": {
    "city": "",
    "email": "",
    "houseNumber": "",
    "name": "",
    "owner": "",
    "street": "",
    "telephone": "",
    "zipcode": "",
  },
}
`;

exports[`Demo4 reducer should update when action setError is dispatched 1`] = `
{
  "emptyVars": [],
  "formValid": true,
  "hasError": true,
  "hasResult": false,
  "irmaAttributes": {
    "city": "",
    "email": "",
    "houseNumber": "",
    "name": "",
    "owner": "",
    "street": "",
    "telephone": "",
    "zipcode": "",
  },
}
`;

exports[`Demo4 reducer should update when action setProperties is dispatched 1`] = `
{
  "emptyVars": [],
  "formValid": true,
  "hasError": false,
  "hasResult": true,
  "irmaAttributes": {
    "city": "Amsterdam",
    "email": undefined,
    "houseNumber": undefined,
    "name": "Test test",
    "owner": "",
    "street": "Teststraat",
    "telephone": "0612345678",
    "zipcode": undefined,
  },
}
`;

exports[`Demo4 reducer should update when action validateForm is dispatched 1`] = `
{
  "emptyVars": [],
  "formValid": true,
  "hasError": false,
  "hasResult": false,
  "irmaAttributes": {
    "city": "",
    "email": "",
    "houseNumber": "",
    "name": "",
    "owner": "test",
    "street": "",
    "telephone": "",
    "zipcode": "",
  },
}
`;
